# funcoder

./: .cspell.json  README.md  pyproject.toml  repo_tools.sh  requirements.txt
experiments/HumanEval-all-FunCoder-g4om240718/: .hparams.json
experiments/MATH-500-FunCoder-g4om240718/: .hparams.json
experiments/MBPP-200-FunCoder-g4om240718/: .hparams.json
experiments/xCodeEval-500-FunCoder-g4om240718/: .hparams.json
funcoder/: __init__.py
funcoder/eval/: config.template.toml  hparams.py  hparams.schema.json  resources.py  scripts.py
funcoder/eval/download_tasks/: maths.py
funcoder/eval/tasks/: humaneval.py  maths.py  mbpp.py  xcodeeval.py
funcoder/langrt/py_parse/: parser.py
funcoder/methods/: shared.py
funcoder/methods/codet/: gen.py
funcoder/methods/fc_ablation/: one_pass.py  two_pass.py  two_pass_cl.py  two_pass_st.py
funcoder/methods/funcoder/: __init__.py  dfs_1pass.py  dfs_2pass.py  gen.py  gen_once.py  gen_picked.py  make_test.py  runner.py
funcoder/methods/funcoder/prompts/: humaneval.py  injected.py  maths.py  sys_test.py  xcodeeval.py
funcoder/methods/vanilla/: gen.py
tests/: test_langrt_py_executor.py  test_langrt_py_parser.py  test_langrt_wrapper.py  test_llm.py  test_methods_codet.py  test_methods_funcoder.py  test_methods_vanilla.py  test_utils_pyctx.py  test_utils_strings.py  test_utils_treestore.py  utils.py
